# openbb-ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
openbb_ai/: __init__.py  helpers.py  models.py
openbb_ai/data/intrinio_datatags_vector_db/: documents.json  vector_index.index
openbb_ai/pydantic_ui/: __init__.py  _adapter.py  _dependencies.py  _event_stream.py  _toolsets.py  _utils.py
tests/: test_helpers.py  test_models.py  test_ui_adapter.py
